# py-c3d

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  c3d.py  c3d_test.py  c3d_viewer.py  pyproject.toml  setup.py
.github/workflows/: deploy.yml  publish.yml  test-and-lint.yml
c3d/: README.md  README.rst  __init__.py  c3d.py  dtypes.py  group.py  header.py  manager.py  parameter.py  reader.py  utils.py  writer.py
docs/: Makefile  README.rst  conf.py  examples.md  index.md  index.rst  quickstart.rst  reference.rst
docs/_templates/: gitwidgets.html
docs/c3d/: dtypes.html  group.html  header.html  index.html  manager.html  parameter.html  reader.html  utils.html  writer.html
examples/: edit.py  my-looped-motion.c3d  read.py  write.py
lmj/: c3d.py
scripts/: README.rst  c3d-metadata  c3d-metadata.py  c3d-viewer  c3d-viewer.py  c3d2csv  c3d2csv.py  c3d2npz  c3d2npz.py  c3d_metadata.py
src/: dtypes.py  group.py  manager.py  parameter.py
test/: README.rst  base.py  c3d_test.py  test_c3d.py  test_c3d2csv.py  test_examples.py  test_format.py  test_frame_count_encodings.py  test_group_accessors.py  test_group_functionality.py  test_manager_group_functions.py  test_parameter_accessors.py  test_parameter_bytes_conversion.py  test_parameter_functions.py  test_proc_format.py  test_software_examples.py  test_software_examples_write_read.py  verify.py  zipload.py
