[tool.poetry]
name = "c3d"
version = "0.4.0"
description = "A library for manipulating C3D binary files"
authors = ["UT Vision, Cognition, and Action Lab"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
