[tool.poetry]
name = "c3d"
version = "0.4.0"
description = "A library for manipulating C3D binary files"
authors = ["UT Vision, Cognition, and Action Lab"]
license = "MIT"
readme="README.rst"
repository="https://github.com/EmbodiedCognition/py-c3d"
keywords=["c3d", "motion-capture"]
classifiers=[
        'Intended Audience :: Science/Research',
        'Operating System :: OS Independent',
        'Topic :: Scientific/Engineering',
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1"
pyglet = {version = "^1.5.21", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
gui = ["pyglet"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
