[tool.poetry]
name = "c3d"
version = "0.6.0"
description = "A library for manipulating C3D binary files"
authors = ["UT Vision, Cognition, and Action Lab"]
maintainers = [
        "Leif Johnson <leif@cs.utexas.edu>",
        "Arne Küderle <a.kuederle@gmail.com>",
        "Charlie Hewitt <contact@chewitt.me>"]
license = "MIT"
readme="README.rst"
repository="https://github.com/EmbodiedCognition/py-c3d"
keywords=["c3d", "motion-capture"]
classifiers=[
        'Intended Audience :: Science/Research',
        'Operating System :: OS Independent',
        'Topic :: Scientific/Engineering',
]

[tool.poetry.scripts]
c3d2csv = 'c3d.scripts.c3d2csv:main'
c3d2npz = 'c3d.scripts.c3d2npz:main'
c3d-metatdata = 'c3d.scripts.c3d_metatdata:main'
c3d-viewer = 'c3d.scripts.c3d_viewer:main'

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.0.0"
pyglet = {version = "^1.5.21", optional = true}

[tool.poetry.extras]
gui = ["pyglet"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
